# osmopy

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  deploy.sh  pyproject.toml  pyrightconfig.json
.claude/: settings.json
docs/: baltic_example.md  baltic_ices_validation_2026-04-18.md  osmose-master-java-fixes.patch  parity-roadmap.md
osmose/: __init__.py  __version__.py  analysis.py  cleanup.py  cli.py  demo.py  ensemble.py  grid.py  history.py  plotly_theme.py  plotting.py  reporting.py  results.py  runner.py  scenarios.py
scripts/: _pull_ices_snapshots.py  apply_ices_validation_fixes.py  benchmark_calibration.py  benchmark_engine.py  benchmark_optimizers.py  build_baltic_predator_nc.py  calibrate_baltic.py  check_config_roundtrip.py  compare_phase12_runs.py  diagnose_divergence.py  launch_phase12_bh_fast.sh  rebuild_baltic_mask.py  relabel_baltic_grid_nc.py  release.py  report_calibration.py  run_dsvm_demo.py  save_parity_baseline.py  sensitivity_phase12.py  swap_whitefish_to_smelt.py  validate_baltic_vs_ices.py  validate_baltic_vs_ices_sag.py  validate_engines.py  validate_outputs_vs_ices.py
tests/: _tutorial_config.py  conftest.py  helpers.py  test_analysis.py  test_app_no_import_side_effects.py  test_app_structure.py  test_baltic_ices_validation.py  test_baltic_java_compat.py  test_bioen_orchestration.py  test_calibrate_baltic_parallelism.py  test_calibrate_baltic_smoke.py  test_calibration_checkpoint.py  test_calibration_dashboard_reactive.py  test_calibration_handlers_preflight.py  test_calibration_history.py  (+185 more)
(+442 files in other folders)
