[project]
name = "osmose-python"
dynamic = ["version"]
description = "Python orchestration layer and Shiny web interface for the OSMOSE marine ecosystem simulator"
requires-python = ">=3.12"
dependencies = [
    "shiny>=1.3.0",
    "shinyswatch>=0.7.0",
    "shinywidgets>=0.3",
    "pandas>=2.2",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "plotly>=5.18",
    "jinja2>=3.1",
    "pymoo>=0.6",
    "scikit-learn>=1.4",
    "SALib>=1.5",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "shiny_deckgl @ git+https://github.com/razinka/shiny_deckgl.git@v1.9.1",
]

[project.optional-dependencies]
numba = ["numba>=0.60"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.5",
    "pyright>=1.1.350",
]

[project.scripts]
osmose = "osmose.cli:main"

[tool.setuptools.dynamic]
version = {attr = "osmose.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["osmose*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end browser tests (Playwright)"]
addopts = "-m 'not e2e'"

[tool.ruff]
target-version = "py312"
line-length = 100
